添加表单提交测试代码 1.模板设置为html  2.todo:新建服务未能顺利接收提交的表单

--- a/views/home.html
+++ b/views/home.html
@@ -5,7 +5,10 @@
     <title>myPage</title>
 </head>
 <body>
-hello ,every body!
-<div><input type="button" id="btnOK" VALUE="确定"/></div>
+<form action="http://localhost:3000/dopost" method="post">
+    姓名：<input type="text" name="username"/>
+    年龄：<input type="number" name="age"/>
+    <input type="submit" value="提交">
+</form>
 </body>
 </html>
