--- a/views/home.html
+++ b/views/home.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>myPage</title>
+    <script src="../public/lib/jquery-2.1.4/jquery.js"></script>
+    $(fun);
 </head>
 <body>
-<form action="http://localhost:3000/dopost" method="post">
+<form action="http://localhost:3000/insertdatapost" method="post">
     姓名：<input type="text" name="username"/>
     年龄：<input type="number" name="age"/>
     <input type="submit" value="提交">
